styles.css
* {
  margin: 0;
}

html,
body {
  height: 100%;
}

body {
  font-family: "Courier New", Courier, monospace;
  background-color: darkgoldenrod;
}

.navbar {
  background-color: rgb(36, 120, 189);
  color: darkgrey;
  display: flex;
  justify-content: space-around;
  align-items: center;
  font-size: 20px;
}

p {
  margin: 0.5em 0 0.5em 0;
}

header {
  display: block;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  background-color: rgb(36, 120, 189);
  padding: 10px;
}

nav a:visited,
nav a:link {
  color: black;
  text-decoration: none;
}

nav > ul {
  display: inline;
  padding: 0;
}

nav > ul > li {
  display: inline-block;
  list-style: none;
  margin: 0 5px 0 5px;
}

.nav-list {
  list-style-type: none;
}

.nav-list .list-item {
  display: inline-block;
  padding: 20px 10px;
}

.navbar a {
  color: black;
  text-decoration: none;
}

.primary-icon {
  height: 30px;
}

main {
  display: block;
  padding-top: 3em;
  padding-bottom: 3em;
  min-height: 85%;
}

footer {
  display: block;
  width: 100%;
  padding: 15px;
  background-color: brown;
}

aside,
article {
  padding: 1em;
}

aside {
  text-align: center;
}

img > aside {
    margin-top: 5em;
}

article {
  width: 75%;
}

h1 {
  font-size: 3em;
  margin-top: 0.5em;
}

.banner {
  max-width: 100%;
}

.sub-title {
  background-color: rgb(110, 129, 1);
  font-size: 1.5em;
  padding: 5px;
  border-radius: 0.5em;
}

.navbar a:hover {
  color: lightgray;
  border-bottom: 5rem, solid, lightgray;
  border-color: lightgray;
    }

.menu {
  display: none;
}

@media only screen and (max-width: 480px) {
  .nav-list .container-icon {
    width: 100%;
  }

  .navbar {
    flex-direction: column;
    position: relative;
  }

  .menu {
    display: block;
    position: absolute;
    right: 15px;
    top: 15px;
  }

  .nav-list {
    width: 100%;
    text-align: center;
    padding-top: 10px;
    display: none;
  }

  .nav-list .list-item {
    display: block;
    padding: 10px;
    border-top: 1px, solid, black;
  }

  .primary-icon {
    margin-left: 10px;
    margin-top: 10px;
  }

  .active {
    display: block;
  }
}

@media only screen and (min-width: 756px) {
  main {
    display: flex;
  }

  aside {
    margin-left: 2%;
  }

  .columns-desktop {
    display: flex;
  }
}

